--- a/index.html
+++ b/index.html
@@ -2124,21 +2124,18 @@
     function formatNumber(value) {
         const number = parseFloat(value);
         if (isNaN(number)) return "0,00";
-    
-        if (number <= 100000000) {
-            // Dla liczb < 10000 używamy toLocaleString z grupowaniem (spacje)
+        if (number <= 1000000000) {
             return number.toLocaleString('pl-PL', {
                 minimumFractionDigits: 2,
                 maximumFractionDigits: 2,
                 useGrouping: true
             });
-        } else {
-            // Dla liczb >= 10000 ręcznie formatujemy bez spacji
-            const fixed = number.toFixed(2); // Zapewnia 2 miejsca po przecinku
-            const [integerPart, decimalPart] = fixed.split('.');
-            // Zwracamy liczbę bez separatorów tysięcy, z przecinkiem jako separatorem dziesiętnym
-            return `${integerPart.replace(/\B(?=(\d{3})+(?!\d))/g, '')},${decimalPart}`;
         }
+        return number.toLocaleString('pl-PL', {
+            minimumFractionDigits: 2,
+            maximumFractionDigits: 2,
+            useGrouping: false
+        });
     }
     
     function obliczObligacje() {
