--- a/index.html
+++ b/index.html
@@ -718,7 +718,7 @@
         max-width: clamp(98%, 100vw, 1000px);
         margin: 10px auto 0;
         line-height: 1.4;
-        padding-left: clamp(0.5em, 1vw, 8em);
+        padding-left: 0;
     }
 
     .harmonogram td,
