--- a/index.html
+++ b/index.html
@@ -2826,11 +2826,16 @@
                                     paddingTop: function () { return 2; },
                                     paddingBottom: function () { return 2; }
                                 },
-                                pageMargins: [14.17, 60, 65.19, 20], // 0,5 cm z lewej, 2,3 cm z prawej
-                                margin: [14.17, 0, 65.19, 0], // Ręczne ustawienie marginesów tabeli
+                                pageMargins: [14.17, 60, 65.19, 20], // Marginesy tabeli
+                                margin: [14.17, 0, 65.19, 0], // Marginesy tabeli
                                 alignment: 'center'
                             },
-                            { text: footerNoteText, style: 'footerNote', margin: [40, 5, 40, 10], pageMargins: [14.17, 60, 14.17, 20] }
+                            { 
+                                text: footerNoteText, 
+                                style: 'footerNote', 
+                                margin: [14.17, 5, 65.19, 10], // Wyrównanie z tabelą: lewy margines 14.17, prawy 65.19
+                                pageMargins: [14.17, 60, 14.17, 20] 
+                            }
                         ]),
                         {
                             text: "Wykres liniowy wartości inwestycji w czasie",
