--- a/index.html
+++ b/index.html
@@ -2251,7 +2251,8 @@
                                     margin: [0, 0, 0, 5]
                                 }
                             ],
-                            margin: [40, 5, 40, 10],
+                            margin: [30, 5, 40, 10],
+                            alignment: 'center',
                             pageBreak: tableData.length > 10 && !isHarmonogramCollapsed ? 'before' : 'none'
                         }
                     ],
