--- a/index.html
+++ b/index.html
@@ -2251,8 +2251,8 @@
                                     margin: [0, 0, 0, 5]
                                 }
                             ],
-                            margin: [50, 5, 70, 10],
-                            pageBreak: tableData.length > 10 && !isHarmonogramCollapsed ? 'before' : 'none'
+                            margin: [40, 5, 60, 10],
+                            /*pageBreak: tableData.length > 10 && !isHarmonogramCollapsed ? 'before' : 'none'*/
                         }
                     ],
                     styles: {
