--- a/index.html
+++ b/index.html
@@ -2245,14 +2245,14 @@
                                 },
                                 { 
                                     image: lineChartImage, 
-                                    width: 525.92, 
+                                    width: 515.92, 
                                     height: 250, 
                                     alignment: 'center',
                                     margin: [0, 0, 0, 5]
                                 }
                             ],
-                            margin: [60, 5, 40, 10],
-                            /*pageBreak: tableData.length > 10 && !isHarmonogramCollapsed ? 'before' : 'none'*/
+                            margin: [50, 5, 50, 10],
+                            pageBreak: tableData.length > 10 && !isHarmonogramCollapsed ? 'before' : 'none'
                         }
                     ],
                     styles: {
